      leaving TypeError Nonetype exception in config.log

  From Daniel Moody:
    - Change the default for AppendENVPath to delete_existing=0, so path
      order will not be changed, unless explicitly set (Issue #3276)
    - Fixed bug which threw error when running SCons on windows system with no MSVC installed.

  From Mats Wichmann:
    - Quiet open file ResourceWarnings on Python >= 3.6 caused by
      not using a context manager around Popen.stdout
    - Add the textfile tool to the default tool list
    - Fix syntax on is/is not cluases: should not use with a literal


RELEASE 3.0.4 - Mon, 20 Jan 2019 22:49:27 +0000

  From Mats Wichmann:
    - Improve finding of Microsoft compiler: add a 'products' wildcard
      in case 2017 Build Tools only is installed as it is considered a separate
      product from the default Visual Studio
    - Add TEMPFILESUFFIX to allow a customizable filename extension, as
      described in the patch attached to issue #2431.
    - Doc updates around Default(), and the various *TARGETS variables.

  From Daniel Moody:
    - Improved support for VC14.1 and Visual Studio 2017, as well as arm and arm64 targets.
      Issues #3268 & Issue #3222
    - Initial support for ARM targets with Visual Studio 2017 - Issue #3182 (You must set TARGET_ARCH for this to work)
    - Update TempFileMunge class to use PRINT_CMD_LINE_FUNC
    - Update link tool to convert target to node before accessing node member
    - Update mingw tool to remove MSVC like nologo CCFLAG

  From Tobias Herzog
    - Enhance cpp scanner regex logic to detect if/elif expressions without whitespaces but
      parenthesis like "#if(defined FOO)" or "#elif!(BAR)" correctly.


RELEASE 3.0.3 - Mon, 07 Jan 2019 20:05:22 -0400
  NOTE: 3.0.2 release was dropped because there was a packaging bug. Please consider all 3.0.2
        content.

  From William Deegan:
    - Fixes to packaging logic.  Ensuring the SCons.Tool.clangCommon module is added
      to the release packages.