@@ -19,6 +19,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Change the default for AppendENVPath to delete_existing=0, so path
       order will not be changed, unless explicitly set (Issue #3276)
     - Fixed bug which threw error when running SCons on windows system with no MSVC installed.
+    - Update link tool to convert target to node before accessing node member
+    - Update mingw tool to remove MSVC like nologo CCFLAG
+    - Update lex tool to work in mingw environments
 
   From Mats Wichmann:
     - Quiet open file ResourceWarnings on Python >= 3.6 caused by
@@ -42,8 +45,6 @@ RELEASE 3.0.4 - Mon, 20 Jan 2019 22:49:27 +0000
       Issues #3268 & Issue #3222
     - Initial support for ARM targets with Visual Studio 2017 - Issue #3182 (You must set TARGET_ARCH for this to work)
     - Update TempFileMunge class to use PRINT_CMD_LINE_FUNC
-    - Update link tool to convert target to node before accessing node member
-    - Update mingw tool to remove MSVC like nologo CCFLAG
 
   From Tobias Herzog
     - Enhance cpp scanner regex logic to detect if/elif expressions without whitespaces but
